Week 2 | Bio Page

--- a/w2-bio/index.html
+++ b/w2-bio/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="John Sarcione's Bio Page">
+    <meta name="author" content="John Sarcione">
+    <title>W2 | Bio Page</title>
 </head>
 <body>
-    
+    <h1 id="header">John Sarcione - About Me</h1>
+    <div id="nav">
+        <a href="#bio">Bio</a>
+        <a href="#schooling">Schooling</a>
+        <a href="#hobbies">Hobbies</a>
+        <a href="#Footer">Footer</a>
+    </div>
+    <h2>Bio</h2>
+    <div id="bio">
+        <p>
+            My name is John Sarcione, but most people call me J.R. I am born and raised in Attleboro, Massachusetts. I am 20 years old and enrolled in the Cybersecurity and Networking program at New England Institute of Technology. I am employed at a video game arcade called Helix eSports Foxboro at Patriot Place.
+        </p>
+    </div>
+    <hr>
+    <h2 id="schooling">Schooling</h2>
+    <h2 id="hobbies">Hobbies</h2>
+
 </body>
 </html>
