Week 2 | Bio Page

--- a/w2-bio/index.html
+++ b/w2-bio/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="John Sarcione's Bio Page">
     <meta name="author" content="John Sarcione">
     <title>W2 | Bio Page</title>
+    <!--John Sarcione, SE111202340 8/3/2023-->
 </head>
 <body>
     <h1 id="header">John Sarcione - About Me</h1>
@@ -14,17 +15,39 @@
         <a href="#bio">Bio</a>
         <a href="#schooling">Schooling</a>
         <a href="#hobbies">Hobbies</a>
-        <a href="#Footer">Footer</a>
+        <a href="#footer">Footer</a>
     </div>
     <h2>Bio</h2>
-    <div id="bio">
+    <div id="bio"><!--Bio Tag-->
         <p>
-            My name is John Sarcione, but most people call me J.R. I am born and raised in Attleboro, Massachusetts. I am 20 years old and enrolled in the Cybersecurity and Networking program at New England Institute of Technology. I am employed at a video game arcade called Helix eSports Foxboro at Patriot Place.
+            My name is <strong>John Sarcione</strong>, but most people call me J.R. I am born and raised in Attleboro, Massachusetts. I am 20 years old and enrolled in the <b>Cybersecurity and Networking</b> program at New England Institute of Technology. I am employed at a video game arcade called Helix eSports Foxboro at Patriot Place.
         </p>
+        <img src="images/thumbnail_8FC621B3-9CDA-41F1-ADBF-A4D0032ADB69.jpg" alt="Picture of me">
     </div>
     <hr>
-    <h2 id="schooling">Schooling</h2>
-    <h2 id="hobbies">Hobbies</h2>
+    <h2>Schooling</h2>
+    <div id="schooling"><!--Schooling Tag-->
+    <ol type="1">
+        <li>Attleboro High School</li>
+        <li>Quinnipiac University</li>
+        <li><i>New England Institute of Technology</i></li>
+      </ol> 
+    </div>
+    <h2>Hobbies</h2>
+    <div id="hobbies"><!--Hobbies Tag-->
+        <ul style="list-style-type:disc;">
+            <li>Video Games</li>
+            <li><em>Going to Live Events</em></li>
+            <li>Sports</li>
+        </ul>
+        <img src="images/Call_of_Duty-_Competitive_History.jpeg" alt="Call of Duty Champs">
+        <a href="https://www.callofdutyleague.com/en-us/" target="_blank">Call of Duty League</a>
+    </div>
+    <br>
+    <div id="footer">
+        <a href="#header">Back to Top</a>
+        <br>
+    </div>
 
 </body>
 </html>
